airflow/logs/dag_id=nyctaxi_elt/run_id=manual__2024-02-06T05:23:44.741404+00:00/task_id=create_monthly_trips/attempt=1.log
[2024-02-06T05:23:52.378+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: nyctaxi_elt.create_monthly_trips manual__2024-02-06T05:23:44.741404+00:00 [queued]>
[2024-02-06T05:23:52.391+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: nyctaxi_elt.create_monthly_trips manual__2024-02-06T05:23:44.741404+00:00 [queued]>
[2024-02-06T05:23:52.392+0000] {taskinstance.py:1368} INFO - 
--------------------------------------------------------------------------------
[2024-02-06T05:23:52.392+0000] {taskinstance.py:1369} INFO - Starting attempt 1 of 1
[2024-02-06T05:23:52.392+0000] {taskinstance.py:1370} INFO - 
--------------------------------------------------------------------------------
[2024-02-06T05:23:52.408+0000] {taskinstance.py:1389} INFO - Executing <Task(PostgresOperator): create_monthly_trips> on 2024-02-06 05:23:44.741404+00:00
[2024-02-06T05:23:52.418+0000] {standard_task_runner.py:52} INFO - Started process 22073 to run task
[2024-02-06T05:23:52.421+0000] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'nyctaxi_elt', 'create_monthly_trips', 'manual__2024-02-06T05:23:44.741404+00:00', '--job-id', '43', '--raw', '--subdir', 'DAGS_FOLDER/nyctaxi_elt.py', '--cfg-path', '/tmp/tmp6w8oozx0', '--error-file', '/tmp/tmp86tafvd_']
[2024-02-06T05:23:52.422+0000] {standard_task_runner.py:80} INFO - Job 43: Subtask create_monthly_trips
[2024-02-06T05:23:52.493+0000] {task_command.py:371} INFO - Running <TaskInstance: nyctaxi_elt.create_monthly_trips manual__2024-02-06T05:23:44.741404+00:00 [running]> on host 9d3dd91d9998
[2024-02-06T05:23:52.574+0000] {taskinstance.py:1583} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Aldy
AIRFLOW_CTX_DAG_ID=nyctaxi_elt
AIRFLOW_CTX_TASK_ID=create_monthly_trips
AIRFLOW_CTX_EXECUTION_DATE=2024-02-06T05:23:44.741404+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-02-06T05:23:44.741404+00:00
[2024-02-06T05:23:52.587+0000] {base.py:68} INFO - Using connection ID '***_postgres' for task execution.
[2024-02-06T05:23:52.603+0000] {sql.py:315} INFO - Running statement: CREATE TABLE IF NOT EXISTS monthly_trip_summary AS
            SELECT 
                extract(month from lpep_pickup_datetime) as date,
                COUNT(*) AS total_trips,
                SUM(EXTRACT(EPOCH FROM (lpep_dropoff_datetime - lpep_pickup_datetime))) AS total_duration,
                AVG(EXTRACT(EPOCH FROM (lpep_dropoff_datetime - lpep_pickup_datetime))) AS avg_duration,
                SUM(passenger_count) AS total_passenger,
                AVG(passenger_count) AS avg_passenger,
                SUM(fare_amount) AS total_fares,
                AVG(fare_amount) AS avg_fares,
                COUNT(tip_amount) AS count_tips,
                SUM(tip_amount) AS total_tips,
                AVG(tip_amount) AS avg_tips,
                SUM(improvement_surcharge+congestion_surcharge) AS total_surcharge,
                MAX(payment_type) AS most_payment_type
            FROM 
                nyc_taxi
            GROUP BY 
                extract(month from lpep_pickup_datetime) as date,, parameters: None
[2024-02-06T05:23:52.604+0000] {taskinstance.py:1902} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "as"
LINE 19: ...           extract(month from lpep_pickup_datetime) as date,
                                                                ^

[2024-02-06T05:23:52.617+0000] {taskinstance.py:1412} INFO - Marking task as FAILED. dag_id=nyctaxi_elt, task_id=create_monthly_trips, execution_date=20240206T052344, start_date=20240206T052352, end_date=20240206T052352
[2024-02-06T05:23:52.629+0000] {standard_task_runner.py:97} ERROR - Failed to execute job 43 for task create_monthly_trips (syntax error at or near "as"
LINE 19: ...           extract(month from lpep_pickup_datetime) as date,
                                                                ^
; 22073)
[2024-02-06T05:23:52.681+0000] {local_task_job.py:156} INFO - Task exited with return code 1
[2024-02-06T05:23:52.714+0000] {local_task_job.py:279} INFO - 0 downstream tasks scheduled from follow-on schedule check
